# json_schema_validator

./: CMakeLists.txt  README.md  invalid_data.json  sample_config.json  schema.json  valid_data.json
src/: json_loader.cpp  json_loader.hpp  main.cpp  print.cpp  print.hpp  schema.cpp  schema.hpp  schema_loader.cpp  validator.cpp  validator.hpp  value.cpp  value.hpp
